v0.4.0:
- Add setting for refreshing spells in storage when picking up spell refresh
- Add back keybind support with M-Néé
- FIX: Slots would bug after polymorph

v0.3.0:
- Add sounds and setting to turn them off again
- Make quick-move from main to storage prefer stacking over placing them in a free slot
- Add text fields for custom resolution to mod settings in addition to the auto-config button

v0.2.3:
- FIX: Spells could still be dropped with right-click even though window is closed
- Take out M-Néé support for now

v0.2.2:
- FIX: More better compatibility with modded spells

v0.2.1:
- FIX: Spells added by other mods should work better now

v0.2.0:
- Add calibration mod setting for custom screen resolutions

v0.1.2:
- Remove leftover debug prints()

v0.1.1:
- FIX: Stored spells were not getting saved on auto-storage

v0.1.0:
- First release